--- a/src/DiffEngine/DiffEngine.csproj
+++ b/src/DiffEngine/DiffEngine.csproj
@@ -4,18 +4,19 @@
     <PackageId>LoxSmoke.DiffEngine</PackageId>
     <Authors>LoxSmoke</Authors>
     <Company>LoxSmoke</Company>
-    <Copyright>Copyright 2020 LoxSmoke</Copyright>
+    <Copyright>Copyright 2020-2024 LoxSmoke</Copyright>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageProjectUrl>https://github.com/loxsmoke/DiffEngine</PackageProjectUrl>
     <RepositoryUrl>https://github.com/loxsmoke/DiffEngine</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>diff diffengine loxsmoke</PackageTags>
+    <PackageOutputPath>./nupkg</PackageOutputPath>
     <RootNamespace>LoxSmoke.DiffEngine</RootNamespace>
-    <Version>0.0.1-prerelease</Version>
+    <Version>0.0.2-prerelease</Version>
     <Description>Extensible diff library for text, json and XML</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>0.0.1.0</AssemblyVersion>
-    <FileVersion>0.0.1.0</FileVersion>
+    <AssemblyVersion>0.0.2.0</AssemblyVersion>
+    <FileVersion>0.0.2.0</FileVersion>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DocumentationFile>DiffEngine.xml</DocumentationFile>
