--- a/.github/workflows/BuildAndTest.yml
+++ b/.github/workflows/BuildAndTest.yml
@@ -26,4 +26,4 @@ jobs:
 
     - name: Run test project
       run: dotnet test
-      working-directory: src/DiffEngineTests
+      working-directory: test/DiffEngineTests
